--- a/client/src/components/App/styles.scss
+++ b/client/src/components/App/styles.scss
@@ -1,6 +1,6 @@
 //noinspection CssUnknownTarget
 @import "reset-css/reset.css";
-@import url('https://fonts.googleapis.com/css?family=Roboto:400,700');
+@import url("https://fonts.googleapis.com/css?family=Roboto:300:400,500");
 @import "../../config/variables";
 
 body {
