--- a/client/src/components/Auth/styles.scss
+++ b/client/src/components/Auth/styles.scss
@@ -6,14 +6,36 @@
   max-width: $max-page-width;
   display: flex;
   min-height: 100%;
-  margin: 30px auto 0;
+  margin: 35px auto 0;
   justify-content: center;
   align-items: center;
+  @include breakpoint("phone") {
+    margin-top: 10px;
+  }
   .column {
     width: 40%;
+    @include breakpoint("phone") {
+      &:first-child {
+        display: none;
+      }
+    }
+    @include breakpoint("tablet") {
+      &:first-child {
+        display: none;
+      }
+    }
     &:last-child {
-      width: 35%;
+      width: 38%;
       margin-left: 35px;
+      @include breakpoint("phone") {
+        width: 100%;
+        margin: 0;
+      }
+      @include breakpoint("tablet") {
+        width: 70%;
+        max-width: 350px;
+        margin: 0;
+      }
     }
     .app-box {
       display: flex;
@@ -34,16 +56,21 @@
       text-align: center;
       padding: 15px;
       @include boxBorder(no);
+      @include breakpoint("phone") {
+        background-color: transparent;
+        border: 0;
+      }
       .change-link {
         color: $light-blue;
         cursor: pointer;
       }
-      p {
+      .text {
         margin: 15px;
       }
     }
     .form-box {
       margin-bottom: 10px;
+      padding: 30px 40px 0;
       img {
         height: 60px;
       }
