--- a/client/src/components/Footer/styles.scss
+++ b/client/src/components/Footer/styles.scss
@@ -1,36 +1,39 @@
 @import "../../config/variables";
 
-.footer{
+.footer {
   max-width: $max-page-width;
   width: 100%;
-  margin: 55px auto;
   display: flex;
   align-items: center;
   justify-content: space-between;
   font-weight: 600;
-  font-size: $small-font-size;
   text-transform: uppercase;
+  font-size: $small-font-size;
+  margin: 55px auto;
   flex-wrap: wrap;
-  @include breakpoint(mobileonly) {
+  @include breakpoint("phone-tablet") {
     justify-content: center;
+    max-width: 350px;
+    margin-bottom: 25px;
   }
-  .column{
-    @include breakpoint(mobileonly) {
+  .column {
+    @include breakpoint("phone-tablet") {
       margin-bottom: 0;
     }
-    .nav{
+    .nav {
       .list {
         display: flex;
         flex-wrap: wrap;
-        @include breakpoint(mobileonly) {
+        @include breakpoint("phone-tablet") {
           justify-content: center;
         }
         .list-item {
           margin-right: 15px;
           color: $dark-blue;
           cursor: pointer;
-          @include breakpoint(mobileonly) {
-            margin-bottom: 15px;
+          @include breakpoint("phone-tablet") {
+            margin-bottom: 10px;
+            margin-right: 15px;
           }
         }
       }
