add facebook login

--- a/client/src/config/_mixin.scss
+++ b/client/src/config/_mixin.scss
@@ -52,9 +52,7 @@ $iphone6plus-width: 450px;
   color: white;
   font-weight: 600;
   border: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  width: 100%;
   font-size: $normal-font-size;
   line-height: 26px;
   cursor: pointer;
