--- a/client/src/components/PhotoActions/styles.scss
+++ b/client/src/components/PhotoActions/styles.scss
@@ -5,6 +5,7 @@
   .icons {
     margin-bottom: 5px;
     .icon {
+      cursor: pointer;
       &:first-child {
         margin-right: 10px;
       }
