--- a/client/src/config/_mixin.scss
+++ b/client/src/config/_mixin.scss
@@ -1,3 +1,6 @@
+@import "./colors.scss";
+@import "./sizes.scss";
+
 $tablet-width: 768px;
 $desktop-width: 875px;
 $xl-desktop-width: 1351px;
@@ -53,6 +56,7 @@ $iphone6plus-width: 450px;
   font-weight: 600;
   border: 0;
   width: 100%;
+  padding: 2px 9px;
   font-size: $normal-font-size;
   line-height: 26px;
   cursor: pointer;
@@ -61,6 +65,6 @@ $iphone6plus-width: 450px;
     outline: none;
   }
   &:active {
-    opacity: 0.9;
+    opacity: 0.7;
   }
 }
